@@ -13,36 +13,32 @@
 
 // vocab.h:
 // Buzz words: ignored in syntactic processing
-// common /buzvoc/
-struct buzvocCB buzvoc = (struct buzvocCB){
+// common /buzvoc/ int bvoc[20];
+const int bvoc[] = {
 //   The following data statement was converted from:
 //	DATA BVOC/3RAND,0,2RBY,0,2RIS,0,1RA,0,
 //     & 2RAN,0,3RTHE,0,3RRUN,0,2RGO,0,3RPRO,3RCEE,0,0/
-   bvoc: {
-      2164, 0, 4200, 0, 15160, 0, 1600, 0,
-      2160, 0, 32325, 0, 29654, 0, 11800, 0, 26335, 5005, 0, 0
-   }
+   2164, 0, 4200, 0, 15160, 0, 1600, 0,
+   2160, 0, 32325, 0, 29654, 0, 11800, 0, 26335, 5005, 0, 0
 };
 
 // Prepositions: maps prepositions to indices
-// common /prpvoc/
-struct prpvocCB prpvoc = (struct prpvocCB){
+// common /prpvoc/ int pvoc[45];
+const int pvoc[] = {
 //   The following data statement was converted from:
 //	DATA PVOC/3ROVE,1RR,1,3RWIT,1RH,2,3RUSI,2RNG,2,3RTHR,3ROUG,2,
 //     & 2RAT,0,3,2RTO,0,4,2RIN,0,5,3RINS,3RIDE,5,3RINT,1RO,5,
 //     & 3RDOW,1RN,6,2RUP,0,7,3RUND,2RER,8,2ROF,0,9,2RON,0,10,
 //     & 3ROFF,0,11/
-   pvoc: {
-      24885, 28800, 1, 37180, 12800, 2, 34369, 22680, 2, 32338, 24847, 2,
-      2400, 0, 3, 32600, 0, 4, 14960, 0, 5, 14979, 14565, 5, 14980, 0, 5,
-      7023, 22400, 6, 34240, 0, 7, 34164, 8720, 8, 24240, 0, 9, 24560, 0, 10,
-      24246, 0, 11
-   }
+   24885, 28800, 1, 37180, 12800, 2, 34369, 22680, 2, 32338, 24847, 2,
+   2400, 0, 3, 32600, 0, 4, 14960, 0, 5, 14979, 14565, 5, 14980, 0, 5,
+   7023, 22400, 6, 34240, 0, 7, 34164, 8720, 8, 24240, 0, 9, 24560, 0, 10,
+   24246, 0, 11
 };
 
 // Directions: maps directions to indices
-// common /dirvoc/
-struct dirvocCB dirvoc = (struct dirvocCB){
+// common /dirvoc/ int dvoc[75];
+const int dvoc[] = {
 //   The following data statement was converted from:
 //	DATA DVOC/1RN,0,"2000,3RNOR,2RTH,"2000,1RS,0,"12000,
 //     & 1RE,0,"6000,3REAS,1RT,"6000,1RW,0,"16000,3RWES,1RT,"16000,
@@ -54,18 +50,16 @@ struct dirvocCB dirvoc = (struct dirvocCB){
 //     & 3RTRA,3RVEL,"36000,3RSOU,2RTH,"12000,
 //     & 2RIN,0,"32000,
 //     & 3RCRO,2RSS,"36000/
-   dvoc: {
-      22400, 0, 1024, 23018, 32320, 1024, 30400, 0, 5120,
-      8000, 0, 3072, 8059, 32000, 3072, 36800, 0, 7168, 37019, 32000, 7168,
-      30600, 0, 4096, 31320, 0, 6144,
-      22600, 0, 2048, 23320, 0, 8192,
-      33600, 0, 9216, 34240, 0, 9216, 6400, 0, 10240, 7023, 22400, 10240,
-      19261, 22528, 11264, 19254, 6400, 12288, 8580, 8720, 13312,
-      8969, 32000, 14336, 24860, 0, 14336, 19401, 35400, 14336,
-      32721, 35412, 15360, 31021, 32320, 5120,
-      14960, 0, 13312,
-      5535, 31160, 15360
-   }
+   22400, 0, 1024, 23018, 32320, 1024, 30400, 0, 5120,
+   8000, 0, 3072, 8059, 32000, 3072, 36800, 0, 7168, 37019, 32000, 7168,
+   30600, 0, 4096, 31320, 0, 6144,
+   22600, 0, 2048, 23320, 0, 8192,
+   33600, 0, 9216, 34240, 0, 9216, 6400, 0, 10240, 7023, 22400, 10240,
+   19261, 22528, 11264, 19254, 6400, 12288, 8580, 8720, 13312,
+   8969, 32000, 14336, 24860, 0, 14336, 19401, 35400, 14336,
+   32721, 35412, 15360, 31021, 32320, 5120,
+   14960, 0, 13312,
+   5535, 31160, 15360
 };
 
 // SPARSE, PAGE 3
